.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Lookup_Rollup_Summary__c.object
<CustomObject>
    <description>Used to create Roll-Up Summary fields for a Lookup relationship</description>
    <fields>
        <fullName>xcdhcm__Child_object__c</fullName>
        <label>Child object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Field_to_aggregate__c</fullName>
        <label>Field to aggregate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Filter_criteria__c</fullName>
        <label>Filter criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All records</fullName>
                </value>
                <value>
                    <fullName>Only records meeting criteria</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Mode__c</fullName>
        <inlineHelpText>Always select the Mode value as Asynchronous when creating new Rollup. Synchronous is specifically for payroll use in the product.</inlineHelpText>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asynchronous</fullName>
                </value>
                <value>
                    <fullName>Synchronous</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Module__c</fullName>
        <description>Current values:
- Payroll
- Recruitment
- Expenses
- HRMS
- Custom (used for custom client configuration)</description>
        <label>Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Parent_object__c</fullName>
        <label>Parent object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Relationship_field__c</fullName>
        <label>Relationship field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Rollup_summary_field__c</fullName>
        <label>Rollup summary field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Rollup_type__c</fullName>
        <label>Rollup type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SUM</fullName>
                    <default>true</default>
                    <label>SUM</label>
                </value>
                <value>
                    <fullName>AVG</fullName>
                </value>
                <value>
                    <fullName>COUNT</fullName>
                </value>
                <value>
                    <fullName>MAX</fullName>
                </value>
                <value>
                    <fullName>MIN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Lookup Rollup Summary</label>
    <nameField>
        <label>Rollup Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Rollup Summaries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>